--- a/style.css
+++ b/style.css
@@ -1289,7 +1289,7 @@ main.home > .feeds {
 }
 
 main.home .trending-story {
-  border: 1px solid #000000;
+  /* border: 1px solid #000000; */
   grid-column: 1/2;
   grid-row: 1;
   text-decoration: none;
@@ -1308,15 +1308,12 @@ main.home .trending-story > span.no {
   /* border: thin solid #00ff00; */
   position: absolute;
   right: 10px;
-  /* z-index: 3; */
   top: 10px;
   height: 38px;
   width: 38px;
   font-weight: 700;
   font-size: 1.2rem;
   font-family: var(--font-mono);
-  /* color: var(--white-color); */
-  /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); */
   color: transparent;
   background-image: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20));
   /* background: var(--accent-linear); */
@@ -1333,12 +1330,9 @@ main.home .trending-story > span.no {
 main.home .trending-story > .info {
   /* border: thin solid #00ff00; */
   width: 100%;
-  /* overflow: hidden; */
-  /* background: var(--fade-picture-gradient); */
   z-index: 1;
   display: flex;
   flex-flow: column;
-  /* padding: 15px 15px 15px; */
   padding: 15px 0;
 }
 
@@ -1395,20 +1389,16 @@ main.home div.side {
   display: flex;
   flex-flow: column;
   gap: 20px;
-  height: max-content;
-  position: sticky;
-  top: 70px;
+  height: 100%;
 }
 
 main.home div.side > .donate-card {
   /* border: 1px solid #ff0000; */
-  /*background-color: #39383816;*/
   padding: 10px 0;
   width: 100%;
   display: none;
   flex-flow: column;
   gap: 5px;
-  /*border-radius: 10px;*/
 }
 
 main.home div.side > .donate-card h2 {
