--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ Author URL: https://femar.co.ke
   --background: #ffffff;
   --vh-height: 100dvh;
 
+  --action-background: #1d2c38d2;
+
   --author-background: #f1f3f4;
   --dot-background: #6b7280c9;
 
