--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ Author URL: https://femar.co.ke
   --action-background: #1d2c38d2;
 
   --author-background: #f1f3f4;
+  --user-background: #f8f8f8;
   --dot-background: #6b7280c9;
 
   --accent-color: #08b86f;
