--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ Author URL: https://femar.co.ke
   --story-border: thin solid #6b72801a;
 
   --story-border-mobile: thin solid #6b728046;
+  --border-mobile: thin solid #6b728088;
 
   --background: #ffffff;
   --vh-height: 100dvh;
@@ -63,6 +64,8 @@ Author URL: https://femar.co.ke
   --modal-shadow: 0 12px 48px #6d758d33;
   --modal-border: 1px solid #83858442;
   --modal-overlay: #1d2534b3;
+
+  /* --option-background: linear-gradient(#53595f71, #627ea034); */
 
   --second-linear: linear-gradient(0deg,#df791a 0%, #f09c4e 100%);
 
