--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@ main.main > article.content .head > h1.title {
   color: #1f2937;
 }
 
-main.main > article.content .head > span.stats {
+main.main > article.content .head > span.meta {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -715,7 +715,7 @@ main.main > article.content .head > span.stats {
   font-size: 0.9rem;
 }
 
-main.main > article.content .head > span.stats span.dot {
+main.main > article.content .head > span.meta span.dot {
   display: none;
 }
 
@@ -1280,6 +1280,433 @@ main.main > section.side .on-this > .table-of-content ul > li {
 main.main > section.side .on-this > .table-of-content ul > li > a:hover {
   /* font-weight: 500; */
   color: #1f2937;
+}
+
+
+main.post {
+  /* border: 1px solid red; */
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+
+  min-height: 60vh;
+}
+
+main.post > .feeds {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+  width: 63%;
+}
+
+main.post > .feeds > .post {
+  border: 1px solid #6b7280;
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+  width: 100%;
+}
+
+main.post > .feeds > .post .head {
+  height: 25px;
+  display: flex;
+  position: relative;
+  color: var(--gray-color);
+  align-items: center;
+  font-family: var(--font-mono), monospace;
+  gap: 20px;
+  font-size: 0.9rem;
+}
+
+main.post > .feeds > .post .head > .author {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+main.post > .feeds > .post .head div.author-name {
+  display: flex;
+  align-items: center;
+}
+
+main.post > .feeds > .post .head div.author-name>a {
+  text-decoration: none;
+  color: transparent;
+  background: var(--accent-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+main.post > .feeds > .post .head a.opinion-link {
+  text-decoration: none;
+  color: transparent;
+  background-image: var(--alt-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+main.post > .feeds > .post .head .profile {
+  border: var(--modal-border);
+  box-shadow: var(--modal-shadow);
+  background-color: var(--background);
+  padding: 0;
+  z-index: 2;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  display: none;
+  flex-flow: column;
+  gap: 0;
+  width: 300px;
+  height: max-content;
+  border-radius: 12px;
+}
+
+main.post > .feeds > .post .head .profile > .cover {
+  padding: 10px 10px;
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+  width: 100%;
+  border-radius: 12px;
+  transition: all 100ms ease-out;
+  -webkit-transition: all 100ms ease-out;
+  -moz-transition: all 100ms ease-out;
+  -ms-transition: all 100ms ease-out;
+  -o-transition: all 100ms ease-out;
+}
+
+main.post > .feeds > .post .head .profile > .cover p.about-info {
+  display: none;
+  font-family: var(--font-main), san-serif;
+}
+
+main.post > .feeds > .post .head > .author:hover .profile {
+  display: flex;
+}
+
+main.post > .feeds > .post .head .profile > span.pointer {
+  border: var(--modal-border);
+  border-bottom: none;
+  border-right: none;
+  position: absolute;
+  top: -5px;
+  left: 50px;
+  background-color: var(--background);
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  rotate: 45deg;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+}
+
+main.post > .feeds > .post .head .opinion .profile > span.pointer {
+  left: unset;
+  right: 50%;
+}
+
+main.post > .feeds > .post .head .profile > .cover > .head {
+  background-color: var(--background);
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  gap: 10px;
+}
+
+main.post > .feeds > .post .head .profile > .cover > .head > .image {
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
+
+main.post > .feeds > .post .head .profile>.cover > .head > .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
+
+main.post > .feeds > .post .head .info {
+  display: flex;
+  flex-flow: column;
+}
+
+main.post > .feeds > .post .head .info p.name {
+  margin: 0;
+  color: var(--text-color);
+  font-weight: 500;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+main.post > .feeds > .post .head .info p.name svg {
+  margin: -2px 0 0;
+  color: var(--accent-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main.post > .feeds > .post .head .info a.followers {
+  text-decoration: none;
+  margin: 0;
+  color: var(--gray-color);
+  background: unset;
+  font-family: var(--font-main), sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+main.post > .feeds > .post .head .info a.followers > span.no {
+  font-family: var(--font-mono), sans-serif;
+}
+
+main.post > .feeds > .post .head .data {
+  margin: 5px 0;
+  display: flex;
+  flex-flow: column;
+}
+
+main.post > .feeds > .post .head .data > p.name {
+  margin: 0;
+  color: var(--text-color);
+  font-weight: 500;
+  font-family: var(--font-main), sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+main.post > .feeds > .post .head .data > span.bio {
+  margin: 0;
+  color: var(--gray-color);
+  font-family: var(--font-main), sans-serif;
+  font-size: 0.9rem;
+}
+
+main.post > .feeds > .post .head span.action {
+  border: var(--action-border);
+  margin: 10px 0 5px;
+  padding: 6px 15px;
+  font-weight: 500;
+  font-family: var(--font-main), sans-serif;
+  font-size: 0.9rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+}
+
+main.post > .feeds > .post .head span.action.follow {
+  border: none;
+  text-decoration: none;
+  color: var(--white-color);
+  background-color: var(--action-color);
+}
+
+main.post > .feeds > .post .content {
+  display: flex;
+  flex-flow: column;
+  color: var(--text-color);
+  line-height: 1.5;
+  gap: 0;
+  margin: 0;
+  padding: 0;
+}
+
+main.post > .feeds > .post .content p {
+  margin: 0 0 5px 0;
+  padding: 0;
+  line-height: 1.5;
+  font-size: 1.02rem;
+  font-family: var(--font-text), sans-serif;
+}
+
+main.post > .feeds > .post .content a {
+  cursor: pointer;
+  color: transparent;
+  background: var(--accent-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+main.post > .feeds > .post .content a:hover {
+  text-decoration-color: var(--anchor-active) !important;
+  text-decoration: underline;
+  -moz-text-decoration-color: var(--anchor-active) !important;
+}
+
+main.post > .feeds > .post .content ul,
+main.post > .feeds > .post .content ol {
+  margin: 10px 0 0 20px;
+  line-height: 1.4;
+  color: var(--font-text);
+  font-family: var(--font-text), sans-serif;
+}
+
+main.post > .feeds > .post .content ul a,
+main.post > .feeds > .post .content ol a {
+  background: unset;
+  color: var(--font-text);
+  font-weight: 500;
+  text-decoration-color: var(--anchor) !important;
+  text-decoration: underline;
+  -moz-text-decoration-color: var(--anchor) !important;
+}
+
+main.post > .feeds > .post .content ul a:hover,
+main.post > .feeds > .post .content ol a:hover {
+  text-decoration-color: #4b5563bd !important;
+  -moz-text-decoration-color: #4b5563bd !important;
+}
+
+main.post > .feeds > .post .meta {
+  height: 25px;
+  display: flex;
+  position: relative;
+  color: var(--gray-color);
+  align-items: center;
+  font-family: var(--font-text), sans-serif;
+  gap: 5px;
+  font-size: 0.9rem;
+}
+
+main.post > .feeds > .post .meta > .views > .no {
+  font-weight: 500;
+}
+
+
+.meta > .stat.upvote {
+  /*border: var(--input-border);*/
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--gray-color);
+}
+
+.meta > .stat.upvote > .numb_list {
+  /*border: var(--action-border);*/
+  height: 21px;
+  min-height: 21px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: calc(16px / -3);
+  display: flex;
+  overflow-y: scroll;
+  display: flex;
+  gap: 5px;
+  align-items: start;
+  justify-content: start;
+  flex-flow: column;
+  transform: translateY(calc(-100% + 21px));
+  transition: transform 0.5s linear;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.meta > .stat.upvote > .numb_list > .numb_list::-webkit-scrollbar {
+  display: none !important;
+  visibility: hidden;
+}
+
+.meta > .stat.upvote > .numb_list {
+  transition: all 500ms ease-in-out;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+}
+
+.meta > .stat.upvote > .numb_list > span {
+  /*border: 1px solid red;*/
+  line-height: 1;
+  display: inline-block;
+  text-align: start;
+  height: 21px;
+  min-height: 21px;
+  padding: 0;
+  margin: 0;
+  font-family: var(--font-main), san-serif;
+  font-size: 1rem;
+}
+
+.meta > .stat.upvote.true > .numb_list > span,
+.meta > .stat.upvote.active > .numb_list > span {
+  color: transparent;
+  background: var(--second-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.meta > .stat.upvote.true > .numb_list > span {
+  padding: 0;
+}
+
+.meta > .stat.upvote.active > .numb_list > span {
+  padding: 0;
+  margin: 0;
+}
+
+.meta > .stat.write {
+  position: relative;
+}
+
+.meta > .stat.write span.line {
+  border-left: var(--close-line);
+  border-bottom: var(--close-line);
+  border-bottom-left-radius: 8px;
+  position: absolute;
+  top: 30px;
+  left: 10px;
+  display: none;
+  width: 10px;
+  height: 32px;
+}
+
+.meta > .stat.upvote svg {
+  margin: 0;
+  width: 15px;
+  height: 15px;
+}
+
+.meta > .stat.upvote.true svg,
+.meta > .stat.upvote.active svg {
+  color: var(--color-alt);
+}
+
+
+
+
+div.side {
+  border: 1px solid #53595f;
+  padding: 0;
+  width: 35%;
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+  /* height: max-content; */
 }
 
 
