--- a/style.css
+++ b/style.css
@@ -1291,7 +1291,7 @@ main.main > section.side .on-this > .table-of-content ul > li > a:hover {
 
 main.post {
   /* border: 1px solid red; */
-  padding: 0;
+  padding: 0 0 30px 0;
   margin: 0;
   display: flex;
   justify-content: space-between;
@@ -1544,7 +1544,7 @@ main.post > .feeds > .post .content p {
   margin: 5px 0 0 0;
   padding: 0;
   line-height: 1.5;
-  font-size: 1.02rem;
+  font-size: 1.05rem;
   font-family: var(--font-text), sans-serif;
 }
 
