--- a/style.css
+++ b/style.css
@@ -1752,14 +1752,152 @@ main.post > .feeds > .post .meta > .views > .no {
 
 
 
-div.side {
-  border: 1px solid #53595f;
+main.post> div.side {
+  /* border: 1px solid #53595f; */
   padding: 0;
   width: 35%;
   display: flex;
   flex-flow: column;
   gap: 20px;
-  /* height: max-content; */
+  position: sticky;
+  top: 70px;
+  height: max-content;
+}
+
+main.post > div.side section.author {
+  /* border: 1px solid #53595f; */
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+  transition: all 100ms ease-out;
+  -webkit-transition: all 100ms ease-out;
+  -moz-transition: all 100ms ease-out;
+  -ms-transition: all 100ms ease-out;
+  -o-transition: all 100ms ease-out;
+}
+
+main.post > div.side section.author p.about-info {
+  display: flex;
+  font-family: var(--font-main), san-serif;
+  color: var(--text-color);
+  line-height: 1.4;
+  margin: 5px 0;
+}
+
+main.post > div.side section.author > .head {
+  background-color: var(--background);
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  gap: 10px;
+}
+
+main.post > div.side section.author > .head > .image {
+  width: 45px;
+  height: 45px;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
+
+main.post > div.side section.author > .head > .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
+
+main.post > div.side section.author > .head .info {
+  display: flex;
+  flex-flow: column;
+}
+
+main.post > div.side section.author > .head .info p.name {
+  margin: 0;
+  color: var(--text-color);
+  font-weight: 500;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+main.post > div.side section.author > .head .info p.name svg {
+  margin: -1px 0 0;
+  color: var(--accent-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main.post > div.side section.author > .head .info a.followers {
+  text-decoration: none;
+  margin: 0;
+  color: var(--gray-color);
+  background: unset;
+  font-family: var(--font-main), sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+main.post > div.side section.author > .head .info a.followers > span.no {
+  font-family: var(--font-mono), sans-serif;
+}
+
+main.post > div.side section.author >.data {
+  /* border: var(--input-border); */
+  margin: 0;
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+}
+
+main.post > div.side section.author > .data > p.name {
+  margin: 0;
+  color: var(--text-color);
+  font-weight: 500;
+  font-family: var(--font-main), sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+main.post > div.side section.author > .data > span.bio {
+  margin: 0;
+  color: var(--gray-color);
+  font-family: var(--font-main), sans-serif;
+  font-size: 0.9rem;
+}
+
+main.post > div.side section.author span.action {
+  border: var(--action-border);
+  margin: 0;
+  padding: 6px 25px;
+  font-weight: 500;
+  font-family: var(--font-text), sans-serif;
+  width: max-content;
+  font-size: 1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+}
+
+main.post > div.side section.author span.action.follow {
+  border: none;
+  text-decoration: none;
+  color: var(--white-color);
+  background-color: var(--action-color);
 }
 
 
