--- a/style.css
+++ b/style.css
@@ -141,6 +141,8 @@ body {
   max-width: 1100px;
   min-height: var(--vh-height, 100vh);
   font-family: var(--font-main), sans-serif;
+
+  padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px) env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
 }
 
 body.stop-scrolling {
@@ -1307,449 +1309,6 @@ main.post > .feeds {
   gap: 0;
   width: 63%;
 }
-
-main.post > .feeds > .post {
-  /* border: 1px solid #6b7280; */
-  display: flex;
-  flex-flow: column;
-  gap: 0;
-  width: 100%;
-}
-
-main.post > .feeds > .post > .head {
-  height: 25px;
-  display: flex;
-  position: relative;
-  color: var(--gray-color);
-  align-items: center;
-  font-family: var(--font-mono), monospace;
-  gap: 20px;
-  font-size: 0.9rem;
-}
-
-main.post > .feeds > .post > .head > .author {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-main.post > .feeds > .post > .head div.author-name {
-  display: flex;
-  align-items: center;
-}
-
-main.post > .feeds > .post > .head div.author-name>a {
-  text-decoration: none;
-  color: transparent;
-  background: var(--accent-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-main.post > .feeds > .post > .head a.opinion-link {
-  text-decoration: none;
-  color: transparent;
-  background-image: var(--alt-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-main.post > .feeds > .post > .head .profile {
-  border: var(--modal-border);
-  box-shadow: var(--modal-shadow);
-  background-color: var(--background);
-  padding: 0;
-  z-index: 2;
-  position: absolute;
-  top: 30px;
-  left: 0;
-  display: none;
-  flex-flow: column;
-  gap: 0;
-  width: 300px;
-  height: max-content;
-  border-radius: 12px;
-}
-
-main.post > .feeds > .post > .head .profile > .cover {
-  padding: 10px 10px;
-  display: flex;
-  flex-flow: column;
-  gap: 5px;
-  width: 100%;
-  border-radius: 12px;
-  transition: all 100ms ease-out;
-  -webkit-transition: all 100ms ease-out;
-  -moz-transition: all 100ms ease-out;
-  -ms-transition: all 100ms ease-out;
-  -o-transition: all 100ms ease-out;
-}
-
-main.post > .feeds > .post > .head .profile > .cover p.about-info {
-  display: none;
-  font-family: var(--font-main), san-serif;
-}
-
-main.post > .feeds > .post > .head > .author:hover .profile {
-  display: flex;
-}
-
-main.post > .feeds > .post > .head .profile > span.pointer {
-  border: var(--modal-border);
-  border-bottom: none;
-  border-right: none;
-  position: absolute;
-  top: -5px;
-  left: 50px;
-  background-color: var(--background);
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  rotate: 45deg;
-  border-radius: 1px;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
-}
-
-main.post > .feeds > .post > .head .opinion .profile > span.pointer {
-  left: unset;
-  right: 50%;
-}
-
-main.post > .feeds > .post > .head .profile > .cover > .head {
-  background-color: var(--background);
-  display: flex;
-  flex-wrap: nowrap;
-  width: 100%;
-  gap: 10px;
-}
-
-main.post > .feeds > .post > .head .profile > .cover > .head > .image {
-  width: 40px;
-  height: 40px;
-  overflow: hidden;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-}
-
-main.post > .feeds > .post > .head .profile > .cover > .head > .image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  overflow: hidden;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-}
-
-main.post > .feeds > .post > .head > .profile > .cover  .info {
-  display: flex;
-  flex-flow: column;
-}
-
-main.post > .feeds > .post > .head .profile > .cover .info p.name {
-  margin: 0;
-  color: var(--text-color);
-  font-weight: 500;
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-main.post > .feeds > .post > .head .profile > .cover .info p.name svg {
-  margin: -2px 0 0;
-  color: var(--accent-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-main.post > .feeds > .post > .head .profile > .cover .info a.followers {
-  text-decoration: none;
-  margin: 0;
-  color: var(--gray-color);
-  background: unset;
-  font-family: var(--font-main), sans-serif;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-main.post > .feeds > .post> .head .profile > .cover .info a.followers > span.no {
-  font-family: var(--font-mono), sans-serif;
-}
-
-main.post > .feeds > .post > .head > .author .cover > .data {
-  /* border: var(--input-border); */
-  margin: 5px 0 0 0;
-  display: flex;
-  flex-flow: column;
-  gap: 0;
-}
-
-main.post > .feeds > .post > .head .data > p.name {
-  margin: 0;
-  color: var(--text-color);
-  font-weight: 500;
-  font-family: var(--font-main), sans-serif;
-  font-size: 1.2rem;
-  line-height: 1.5;
-}
-
-main.post > .feeds > .post > .head .data > span.bio {
-  margin: 0;
-  color: var(--gray-color);
-  font-family: var(--font-main), sans-serif;
-  font-size: 0.9rem;
-}
-
-main.post > .feeds > .post > .head span.action {
-  border: var(--action-border);
-  margin: 10px 0 5px;
-  padding: 6px 15px;
-  font-weight: 500;
-  font-family: var(--font-main), sans-serif;
-  font-size: 0.9rem;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-}
-
-main.post > .feeds > .post > .head span.action.follow {
-  border: none;
-  text-decoration: none;
-  color: var(--white-color);
-  background-color: var(--action-color);
-}
-
-main.post > .feeds > .post .content {
-  display: flex;
-  flex-flow: column;
-  color: var(--text-color);
-  line-height: 1.5;
-  gap: 0;
-  margin: 0;
-  padding: 0;
-}
-
-main.post > .feeds > .post .content p {
-  margin: 5px 0 0 0;
-  padding: 0;
-  line-height: 1.5;
-  font-size: 1.05rem;
-  font-family: var(--font-text), sans-serif;
-}
-
-main.post > .feeds > .post .content a {
-  cursor: pointer;
-  color: transparent;
-  background: var(--accent-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-main.post > .feeds > .post .content a:hover {
-  text-decoration-color: var(--anchor-active) !important;
-  text-decoration: underline;
-  -moz-text-decoration-color: var(--anchor-active) !important;
-}
-
-main.post > .feeds > .post .content ul,
-main.post > .feeds > .post .content ol {
-  margin: 10px 0 0 20px;
-  line-height: 1.4;
-  color: var(--font-text);
-  font-family: var(--font-text), sans-serif;
-}
-
-main.post > .feeds > .post .content ul a,
-main.post > .feeds > .post .content ol a {
-  background: unset;
-  color: var(--font-text);
-  font-weight: 500;
-  text-decoration-color: var(--anchor) !important;
-  text-decoration: underline;
-  -moz-text-decoration-color: var(--anchor) !important;
-}
-
-main.post > .feeds > .post .content ul a:hover,
-main.post > .feeds > .post .content ol a:hover {
-  text-decoration-color: #4b5563bd !important;
-  -moz-text-decoration-color: #4b5563bd !important;
-}
-
-main.post > .feeds > .post .meta {
-  margin: 10px 0;
-  display: flex;
-  position: relative;
-  color: var(--gray-color);
-  align-items: center;
-  font-family: var(--font-text), sans-serif;
-  gap: 5px;
-  font-size: 1rem;
-}
-
-main.post > .feeds > .post .meta > .views > .no {
-  font-weight: 500;
-}
-
-
-.stats {
-  /* border: var(--input-border); */
-  padding: 0;
-  margin: 0 0 20px 0;
-  display: flex;
-  align-items: center;
-  gap: 23px;
-}
-
-.stats > .stat {
-  padding: 3px 0;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  font-size: 1rem;
-  font-weight: 400;
-  color: var(--gray-color);
-}
-
-.stats span.no {
-  font-family: var(--font-main), sans-serif;
-  font-size: 1rem;
-}
-
-.stats * {
-  font-family: var(--font-main), sans-serif;
-}
-
-.stats>.stat.upvote {
-  /*border: var(--input-border);*/
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3px;
-  font-size: 1rem;
-  font-weight: 400;
-  color: var(--gray-color);
-}
-
-.stats>.stat.upvote>.numb_list {
-  /*border: var(--action-border);*/
-  height: 21px;
-  min-height: 21px;
-  padding: 0;
-  margin: 0;
-  margin-bottom: calc(16px / -3);
-  display: flex;
-  overflow-y: scroll;
-  display: flex;
-  gap: 5px;
-  align-items: start;
-  justify-content: start;
-  flex-flow: column;
-  transform: translateY(calc(-100% + 21px));
-  transition: transform 0.5s linear;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.stats>.stat.upvote>.numb_list>.numb_list::-webkit-scrollbar {
-  display: none !important;
-  visibility: hidden;
-}
-
-.stats>.stat.upvote>.numb_list {
-  transition: all 500ms ease-in-out;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -ms-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-}
-
-.stats>.stat.upvote>.numb_list>span {
-  /*border: 1px solid red;*/
-  line-height: 1;
-  display: inline-block;
-  text-align: start;
-  height: 21px;
-  min-height: 21px;
-  padding: 0;
-  margin: 0;
-  font-family: var(--font-main), san-serif;
-  font-size: 1rem;
-}
-
-.stats>.stat.upvote.true>.numb_list>span,
-.stats>.stat.upvote.active>.numb_list>span {
-  color: transparent;
-  background: var(--second-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-.stats>.stat.upvote.true>.numb_list>span {
-  padding: 0;
-}
-
-.stats>.stat.upvote.active>.numb_list>span {
-  padding: 0;
-  margin: 0;
-}
-
-.stats>.stat.write {
-  /* border-bottom: var(--close-line); */
-  color: var(--accent-color);
-  position: relative;
-}
-
-.stats>.stat.write span.line {
-  border-left: var(--open-line);
-  /* border-bottom: var(--close-line); */
-  position: absolute;
-  top: 30px;
-  left: 10px;
-  display: flex;
-  width: 5px;
-  height: 15px;
-  border-radius: 0;
-}
-
-.stats > .stat.write svg {
-  color: inherit;
-  width: 22px;
-  height: 22px;
-}
-
-.stats > .stat.discuss svg {
-  margin: -1px 0 0 0;
-  color: inherit;
-  width: 18px;
-  height: 18px;
-}
-
-.stats>.stat.upvote svg {
-  margin: 0;
-  width: 15px;
-  height: 15px;
-}
-
-.stats>.stat.upvote.true svg,
-.stats>.stat.upvote.active svg {
-  color: var(--color-alt);
-}
-
-
 
 
 main.post> div.side {
